--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,9 +20,12 @@
                     <a class="nav-link" href="{{ url_for('clients') }}">Clientes</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('services') }}">Servicios</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('products') }}">Productos</a>
                 </li>
-                 <li class="nav-item">
+                <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('consumption') }}">Registrar Consumo</a>
                 </li>
             </ul>
